# dfs

./: README.md  pyproject.toml  use_lib.py
examples/: use_lib.py
src/dfs/: core.py
src/fshow/: core.py
src/sf/: core.py  sf.py
src/wsf/: core.py
